added titanic ntb

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can 
 													apply to the female population.</p>
+											<a href="assets/notebooks/titanic.html">Notebook
 										</div>
 									</a>
 								</article>
