--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can 
 													apply to the female population.</p>
-											<a href="assets/notebooks/titanic.html">Notebook
+											<a href="assets/notebooks/titanic.html">Notebook</a>
 										</div>
 									</a>
 								</article>
