--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://mybinder.org/v2/gh/jackietrang/health/master?filepath=Healthcare%20Project.ipynb">
 										<h2>Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
-											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can 
+											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
 													apply to the female population.</p>
-											<a href="assets/notebooks/titanic.html">Notebook</a>
 										</div>
 									</a>
 								</article>
