--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Jackie Trang Statistical Inference (1).html">
+									<a href="file:///C:/Users/trang/Downloads/Jackie%20Trang%20Statistical%20Inference%20(1).html">
 										<h2>Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
