added titanic ntb bind

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="titanic.html">Notebook</a>
+									<a href="titanic.html"></a>
 										<h2>Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
