added titanic ntb bind

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hi! I am</h1>
-								<p>An aspired Data Scientist with proficiency in Python and R for statistical analysis.</p>
+								<p>An aspiring Data Scientist with proficiency in Python and R for statistical analysis.</p>
 							</p>Interested in all-thing-data & sharpening my knowledge in machine learning algorithms.</p>
 							</header>
 							<section class="tiles">
@@ -94,8 +94,8 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Evaluate A/B Testing: Furniure Discount Case</h2>
+									<a href="test.html">
+										<h2>Evaluate A/B Testing: Furniture Discount Case</h2>
 										<div class="content">
 											<p>R is useful for market and marketing analytics. In this case, I will use a simple data set in Furniture Discount Case to demonstrate A/B testing analysis in R.</p>
 										</div>
