added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://github.com/jackietrang/health.git">
 										<h2>R competency: Regression & Bootstrapping</h2>
 										<div class="content">
 											<p>I perform regression and bootstrapping on various data sets to shed light into their diverse uses. </p>
