--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="https://hub.gke.mybinder.org/user/jackietrang-tit--age-and-gender-v7df0kjs/notebooks/Jackie%20Trang%20Statistical%20Inference.ipynb">
+									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
 										<h2>Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
