added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="test.html">
+									<a href="assets/notebooks/titanic.html">
 										<h2>Interesting people I've met.</h2>
 										<div class="content">
 											<p></p>
