added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="https://mybinder.org/v2/gh/jackietrang/health/master?filepath=Healthcare%20Project.ipynb">
-										<h2>Examine the effect of age on Titanic survival rate</h2>
+										<h2>[Python] Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
 													apply to the female population.</p>
@@ -72,10 +72,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://github.com/jackietrang/health.git">
-										<h2>R competency: Regression & Bootstrapping</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/Predict-ICU-patients-mortality/master?filepath=Intensive%20Care%20Unit%20-%20Mortality.ipynb">
+										<h2>[Python] Predict ICU patients mortality</h2>
 										<div class="content">
-											<p>I perform regression and bootstrapping on various data sets to shed light into their diverse uses. </p>
+											<p>I performed hypothesis testing and regression to predict ICU patients mortality based on a sample of 200 patients. </p>
 										</div>
 									</a>
 								</article>
