added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="assets/notebooks/titanic.html">
+									<a href="generic.html">
 										<h2>Interesting people I've met.</h2>
 										<div class="content">
 											<p></p>
@@ -106,7 +106,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>#coolproject:        An AR game that increases civic engagement in space exploration</h2>
+										<h2>#love4science:        An AR game that increases civic engagement in space exploration</h2>
 										<div class="content">
 											<p>This is a 2-semester project of me and 3 other classmates that provides a justifications for a Virtual Reality (VR) game. This game can be used to increase awareness about consumer products as spin-off technologies from NASA. </p>
 										</div>
