added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Interesting people I've met.</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/resamplingmethods/master?filepath=bootstrapping.R">
+										<h2>[R] Explore resampling methods: bootstrap & cross-validation</h2>
 										<div class="content">
 											<p></p>
 										</div>
