added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/resamplingmethods/master?filepath=bootstrapping.R">
-										<h2>[R] Explore resampling methods: bootstrap & cross-validation</h2>
+									<a href="http://rpubs.com/jackietrang/544713">
+										<h2>[R] Market segmentation using clustering algorithm</h2>
 										<div class="content">
-											<p></p>
+											<p>Market segmentation is essential for product launch. I used clustering algorithm which looks for cluster of data with similar attributes to group them together, ensuring the internal homogeneity among market segments.</p>
 										</div>
 									</a>
 								</article>
