added titanic ntb bin

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://docs.google.com/document/d/1CbMnC3nL81VtfmnI1r9Rv6zjP0IvhAkRqF70gwcD7WU/edit?usp=sharing">
 										<h2>#love4science:        An AR game that increases civic engagement in space exploration</h2>
 										<div class="content">
 											<p>This is a 2-semester project of me and 3 other classmates that provides a justifications for a Virtual Reality (VR) game. This game can be used to increase awareness about consumer products as spin-off technologies from NASA. </p>
@@ -113,6 +113,22 @@
 									</a>
 						
 								
+									</a>
+								</article>
+
+								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>My journey to Tech</h2>
+										<div class="content">
+											<p> </p>
+										</div>
+									</a>
+
+
 									</a>
 								</article>
 							</section>
