added titanic ntb bin

--- a/generic.html
+++ b/generic.html
@@ -22,7 +22,9 @@
 
 			<!-- Logo -->
 			<a href="index.html" class="logo">
-				<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+				<span class="symbol">< /><img
+						src="assets/portfolio pics/15393017_1000890263350238_8758953569214863833_o.jpg" height="747"
+						width="1328"/></span><span class="title">Phantom</span>
 			</a>
 
 			<!-- Nav -->
