--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="elements.html">
+									<a href="generic.html">
 										<h2>My journey to Tech</h2>
 										<div class="content">
 											<p> </p>
