--- a/generic.html
+++ b/generic.html
@@ -1,102 +1,103 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
+	Lens by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 <head>
-	<title>Generic - Phantom by HTML5 UP</title>
+	<title>Lens by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="is-preload">
-<!-- Wrapper -->
-<div id="wrapper">
+<body class="is-preload-0 is-preload-1 is-preload-2">
+
+<!-- Main -->
+<div id="main">
 
 	<!-- Header -->
 	<header id="header">
-		<div class="inner">
-
-			<!-- Logo -->
-			<a href="index.html" class="logo">
-				<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-			</a>
-
-			<!-- Nav -->
-			<nav>
-				<ul>
-					<li><a href="#menu">Menu</a></li>
-				</ul>
-			</nav>
-
-		</div>
+		<h1>Lens</h1>
+		<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+		<ul class="icons">
+			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+			<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+		</ul>
 	</header>
 
-	<!-- Menu -->
-	<nav id="menu">
-		<h2>Menu</h2>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="generic.html">Ipsum veroeros</a></li>
-			<li><a href="generic.html">Tempus etiam</a></li>
-			<li><a href="generic.html">Consequat dolor</a></li>
-			<li><a href="elements.html">Elements</a></li>
-		</ul>
-	</nav>
-
-	<!-- Main -->
-	<div id="main">
-		<div class="inner">
-			<h1>It's the unexpected that changes our lives.</h1>
-			<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-			<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-			<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-		</div>
-	</div>
+	<!-- Thumbnail -->
+	<section id="thumbnails">
+		<article>
+			<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+			<h2>Diam tempus accumsan</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
+			<h2>Vivamus convallis libero</h2>
+			<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
+			<h2>Nec accumsan enim felis</h2>
+			<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
+			<h2>Donec maximus nisi eget</h2>
+			<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
+			<h2>Nullam vitae nunc vulputate</h2>
+			<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
+			<h2>Phasellus magna faucibus</h2>
+			<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
+			<h2>Proin quis mauris</h2>
+			<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
+			<h2>Gravida quis varius enim</h2>
+			<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
+			<h2>Morbi eget vitae adipiscing</h2>
+			<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
+			<h2>Habitant tristique senectus</h2>
+			<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
+			<h2>Pharetra ex non faucibus</h2>
+			<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+		</article>
+		<article>
+			<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
+			<h2>Mattis lorem sodales</h2>
+			<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+		</article>
+	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
-		<div class="inner">
-			<section>
-				<h2>Get in touch</h2>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field half">
-							<input type="text" name="name" id="name" placeholder="Name" />
-						</div>
-						<div class="field half">
-							<input type="email" name="email" id="email" placeholder="Email" />
-						</div>
-						<div class="field">
-							<textarea name="message" id="message" placeholder="Message"></textarea>
-						</div>
-					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send" class="primary" /></li>
-					</ul>
-				</form>
-			</section>
-			<section>
-				<h2>Follow</h2>
-				<ul class="icons">
-					<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-					<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-					<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-			</section>
-			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
+		<ul class="copyright">
+			<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+		</ul>
 	</footer>
 
 </div>
@@ -105,7 +106,6 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
