--- a/generic.html
+++ b/generic.html
@@ -19,8 +19,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<h1>Lens</h1>
-		<p>Just another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+		<h1>It's the unexpected that make our lives.</h1>
 		<ul class="icons">
 			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -32,7 +31,7 @@
 	<!-- Thumbnail -->
 	<section id="thumbnails">
 		<article>
-			<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+			<a class="thumbnail" href="assets/portfolio%20pics/tau1.jpg" data-position="left center"><img src="assets/portfolio%20pics/tau1.jpg" alt="" /></a>
 			<h2>Diam tempus accumsan</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</article>
