--- a/generic.html
+++ b/generic.html
@@ -1,103 +1,232 @@
 <!DOCTYPE HTML>
 <!--
-	Lens by HTML5 UP
+	Striped by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 <head>
-	<title>Lens by HTML5 UP</title>
+	<title>Striped by HTML5 UP</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="is-preload-0 is-preload-1 is-preload-2">
+<body class="is-preload">
 
-<!-- Main -->
-<div id="main">
+<!-- Content -->
+<div id="content">
+	<div class="inner">
 
-	<!-- Header -->
-	<header id="header">
-		<h1>It's the unexpected that make our lives.</h1>
-		<ul class="icons">
-			<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-			<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+		<!-- Post -->
+		<article class="box post post-excerpt">
+			<header>
+				<!--
+                    Note: Titles and subtitles will wrap automatically when necessary, so don't worry
+                    if they get too long. You can also remove the <p> entirely if you don't
+                    need a subtitle.
+                -->
+				<h2><a href="#">Welcome to Striped</a></h2>
+				<p>A free, fully responsive HTML5 site template by HTML5 UP</p>
+			</header>
+			<div class="info">
+				<!--
+                    Note: The date should be formatted exactly as it's shown below. In particular, the
+                    "least significant" characters of the month should be encapsulated in a <span>
+                    element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+                    Oh, and if you don't need a date for a particular page or post you can simply delete
+                    the entire "date" element.
+
+                -->
+				<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">14</span><span class="year">, 2014</span></span>
+				<!--
+                    Note: You can change the number of list items in "stats" to whatever you want.
+                -->
+				<ul class="stats">
+					<li><a href="#" class="icon fa-comment">16</a></li>
+					<li><a href="#" class="icon fa-heart">32</a></li>
+					<li><a href="#" class="icon brands fa-twitter">64</a></li>
+					<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+				</ul>
+			</div>
+			<a href="#" class="image featured"><img src="assets/portfolio%20pics/tau1.jpg" alt="" /></a>
+			<p>
+				<strong>Hello!</strong> You're looking at <strong>Striped</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a>
+				for <a href="http://html5up.net">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
+				repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
+			</p>
+			<p>
+				Striped is released for free under the <a href="http://html5up.net/license">Creative Commons Attribution license</a> so feel free to use it for personal projects
+				or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
+				<a href="http://html5up.net">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/ajlkn">Twitter</a> for new releases and updates.
+			</p>
+		</article>
+
+		<!-- Post -->
+		<article class="box post post-excerpt">
+			<header>
+				<h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
+				<p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>
+			</header>
+			<div class="info">
+				<span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+				<ul class="stats">
+					<li><a href="#" class="icon fa-comment">16</a></li>
+					<li><a href="#" class="icon fa-heart">32</a></li>
+					<li><a href="#" class="icon brands fa-twitter">64</a></li>
+					<li><a href="#" class="icon brands fa-facebook-f">128</a></li>
+				</ul>
+			</div>
+			<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+			<p>
+				Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
+				Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore.
+				Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus.
+				Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
+			</p>
+		</article>
+
+		<!-- Pagination -->
+		<div class="pagination">
+			<!--<a href="#" class="button previous">Previous Page</a>-->
+			<div class="pages">
+				<a href="#" class="active">1</a>
+				<a href="#">2</a>
+				<a href="#">3</a>
+				<a href="#">4</a>
+				<span>&hellip;</span>
+				<a href="#">20</a>
+			</div>
+			<a href="#" class="button next">Next Page</a>
+		</div>
+
+	</div>
+</div>
+
+<!-- Sidebar -->
+<div id="sidebar">
+
+	<!-- Logo -->
+	<h1 id="logo"><a href="#">STRIPED</a></h1>
+
+	<!-- Nav -->
+	<nav id="nav">
+		<ul>
+			<li class="current"><a href="#">Latest Post</a></li>
+			<li><a href="#">Archives</a></li>
+			<li><a href="#">About Me</a></li>
+			<li><a href="#">Contact Me</a></li>
 		</ul>
-	</header>
+	</nav>
 
-	<!-- Thumbnail -->
-	<section id="thumbnails">
-		<article>
-			<a class="thumbnail" href="assets/portfolio%20pics/tau1.jpg" data-position="left center"><img src="assets/portfolio%20pics/tau1.jpg" alt="" /></a>
-			<h2>Diam tempus accumsan</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-			<h2>Vivamus convallis libero</h2>
-			<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-			<h2>Nec accumsan enim felis</h2>
-			<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-			<h2>Donec maximus nisi eget</h2>
-			<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-			<h2>Nullam vitae nunc vulputate</h2>
-			<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-			<h2>Phasellus magna faucibus</h2>
-			<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-			<h2>Proin quis mauris</h2>
-			<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-			<h2>Gravida quis varius enim</h2>
-			<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-			<h2>Morbi eget vitae adipiscing</h2>
-			<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-			<h2>Habitant tristique senectus</h2>
-			<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-			<h2>Pharetra ex non faucibus</h2>
-			<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
-		</article>
-		<article>
-			<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-			<h2>Mattis lorem sodales</h2>
-			<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
-		</article>
+	<!-- Search -->
+	<section class="box search">
+		<form method="post" action="#">
+			<input type="text" class="text" name="search" placeholder="Search" />
+		</form>
 	</section>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="copyright">
-			<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+	<!-- Text -->
+	<section class="box text-style1">
+		<div class="inner">
+			<p>
+				<strong>Striped:</strong> A free and fully responsive HTML5 site
+				template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>
+			</p>
+		</div>
+	</section>
+
+	<!-- Recent Posts -->
+	<section class="box recent-posts">
+		<header>
+			<h2>Recent Posts</h2>
+		</header>
+		<ul>
+			<li><a href="#">Lorem ipsum dolor</a></li>
+			<li><a href="#">Feugiat nisl aliquam</a></li>
+			<li><a href="#">Sed dolore magna</a></li>
+			<li><a href="#">Malesuada commodo</a></li>
+			<li><a href="#">Ipsum metus nullam</a></li>
 		</ul>
-	</footer>
+	</section>
+
+	<!-- Recent Comments -->
+	<section class="box recent-comments">
+		<header>
+			<h2>Recent Comments</h2>
+		</header>
+		<ul>
+			<li>case on <a href="#">Lorem ipsum dolor</a></li>
+			<li>molly on <a href="#">Sed dolore magna</a></li>
+			<li>case on <a href="#">Sed dolore magna</a></li>
+		</ul>
+	</section>
+
+	<!-- Calendar -->
+	<section class="box calendar">
+		<div class="inner">
+			<table>
+				<caption>July 2014</caption>
+				<thead>
+				<tr>
+					<th scope="col" title="Monday">M</th>
+					<th scope="col" title="Tuesday">T</th>
+					<th scope="col" title="Wednesday">W</th>
+					<th scope="col" title="Thursday">T</th>
+					<th scope="col" title="Friday">F</th>
+					<th scope="col" title="Saturday">S</th>
+					<th scope="col" title="Sunday">S</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td colspan="4" class="pad"><span>&nbsp;</span></td>
+					<td><span>1</span></td>
+					<td><span>2</span></td>
+					<td><span>3</span></td>
+				</tr>
+				<tr>
+					<td><span>4</span></td>
+					<td><span>5</span></td>
+					<td><a href="#">6</a></td>
+					<td><span>7</span></td>
+					<td><span>8</span></td>
+					<td><span>9</span></td>
+					<td><a href="#">10</a></td>
+				</tr>
+				<tr>
+					<td><span>11</span></td>
+					<td><span>12</span></td>
+					<td><span>13</span></td>
+					<td class="today"><a href="#">14</a></td>
+					<td><span>15</span></td>
+					<td><span>16</span></td>
+					<td><span>17</span></td>
+				</tr>
+				<tr>
+					<td><span>18</span></td>
+					<td><span>19</span></td>
+					<td><span>20</span></td>
+					<td><span>21</span></td>
+					<td><span>22</span></td>
+					<td><a href="#">23</a></td>
+					<td><span>24</span></td>
+				</tr>
+				<tr>
+					<td><a href="#">25</a></td>
+					<td><span>26</span></td>
+					<td><span>27</span></td>
+					<td><span>28</span></td>
+					<td class="pad" colspan="3"><span>&nbsp;</span></td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+	</section>
+
+	<!-- Copyright -->
+	<ul id="copyright">
+		<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+	</ul>
 
 </div>
 
@@ -105,6 +234,7 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/browser.min.js"></script>
 <script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
