--- a/generic.html
+++ b/generic.html
@@ -49,7 +49,7 @@
 
 	<!-- Main -->
 	<div id="main">
-		<div class="inner">
+		<div id="banner" style="overflow: hidden; ">
 			<h1>Generic Page</h1>
 			<div class="image-div" >
 				<img src ="assets/portfolio%20pics/tau2.jpg">
