--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="test.html">
-										<h2>Evaluate A/B Testing: Furniture Discount Case</h2>
+									<a href="https://github.com/jackietrang/100daysofcode">
+										<h2>#100daysofcode: Lessons learnt</h2>
 										<div class="content">
-											<p>R is useful for market and marketing analytics. In this case, I will use a simple data set in Furniture Discount Case to demonstrate A/B testing analysis in R.</p>
+											<p>Inspired by my connections, I challenge myself with #100daysofcode starting Oct 31, 2019 (Happy Halloween!). This repository will record lessons I learned each day.</p>
 										</div>
 									</a>
 								</article>
