--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
-										<h2>[Python] Examine the effect of age on Titanic survival rate</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/SFsalariesdataset/master?filepath=SF%20Salaries-%20Data%20Exploration%20%26%20Visualization.ipynb">
+										<h2>#workinprogress: [Python] Dive into SF Salaries data set</h2>
 										<div class="content">
-											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
-													apply to the female population.</p>
+											<p>Inspired by my connections, I challenge myself with #100daysofcode starting Oct 31, 2019 (Happy Halloween!). This is one project I've been working on since the start of the challenge, which aims at applying seaborn package & predictive modeling.</p>
 										</div>
 									</a>
 								</article>
@@ -94,10 +93,11 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="https://github.com/jackietrang/100daysofcode">
-										<h2>#100daysofcode: Lessons learnt</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
+										<h2>[Python] Examine the effect of age on Titanic survival rate</h2>
 										<div class="content">
-											<p>Inspired by my connections, I challenge myself with #100daysofcode starting Oct 31, 2019 (Happy Halloween!). This repository will record lessons I learned each day.</p>
+											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
+												apply to the female population.</p>
 										</div>
 									</a>
 								</article>
