--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/Predict-ICU-patients-mortality/master?filepath=Intensive%20Care%20Unit%20-%20Mortality.ipynb">
-										<h2>[Python] Predict ICU patients mortality</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
+										<h2>[Python] EDA & Predict Titanic Survival (Logistic Regression, Random forest & more)</h2>
 										<div class="content">
-											<p>I performed hypothesis testing and regression to predict ICU patients mortality based on a sample of 200 patients. </p>
+											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
+												apply to the female population.</p>
 										</div>
 									</a>
+
 								</article>
 								<article class="style3">
 									<span class="image">
@@ -93,11 +95,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
-										<h2>[Python] Examine the effect of age on Titanic survival rate</h2>
+									<a href="https://mybinder.org/v2/gh/jackietrang/Predict-ICU-patients-mortality/master?filepath=Intensive%20Care%20Unit%20-%20Mortality.ipynb">
+										<h2>[Python] Predict ICU patients mortality</h2>
 										<div class="content">
-											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
-												apply to the female population.</p>
+											<p>I performed hypothesis testing and regression to predict ICU patients mortality based on a sample of 200 patients. </p>
 										</div>
 									</a>
 								</article>
