--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/Titanic-Predict-survival-rate-based-on-age-and-gender/master?filepath=Jackie%20Trang%20Statistical%20Inference.ipynb">
+									<a href="https://mybinder.org/v2/gh/jackietrang/Predict-Titanic-Survival-EDA/master?filepath=Predict%20Titanic%20Survival%20%26%20Exploring%20Data%20Analysis.ipynb">
 										<h2>[Python] EDA & Predict Titanic Survival (Logistic Regression, Random forest & more)</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
