--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="https://mybinder.org/v2/gh/jackietrang/Predict-Titanic-Survival-EDA/master?filepath=Predict%20Titanic%20Survival%20%26%20Exploring%20Data%20Analysis.ipynb">
-										<h2>[Python] EDA & Predict Titanic Survival (Logistic Regression, Random forest & more)</h2>
+										<h2>[Python] EDA & Predict Titanic Survival (Logit, Random forest & more)</h2>
 										<div class="content">
 											<p>Using Python, I examine the notion that survivors of Titanic are younger than non-survivors, and if this notion can
 												apply to the female population.</p>
