--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="https://mybinder.org/v2/gh/jackietrang/SFsalariesdataset/master?filepath=SF%20Salaries-%20Data%20Exploration%20%26%20Visualization.ipynb">
-										<h2>#workinprogress: [Python] Dive into SF Salaries data set</h2>
+									<a href="https://drive.google.com/drive/u/0/folders/1iSu6wMaEQi1sfQ8x72UbBhFxLoA2VRde">
+										<h2>My Journey to Tech</h2>
 										<div class="content">
-											<p>Inspired by my connections, I challenge myself with #100daysofcode starting Oct 31, 2019 (Happy Halloween!). This is one project I've been working on since the start of the challenge, which aims at applying seaborn package & predictive modeling.</p>
+											<p>Pursuing a career as a computer scientist has been my wildest dream so far. I'd not be here today without some critical exposures earlier in life. And this is my story...</p>
 										</div>
 									</a>
 								</article>
