--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="https://drive.google.com/drive/u/0/folders/1iSu6wMaEQi1sfQ8x72UbBhFxLoA2VRde">
+									<a href="https://drive.google.com/file/d/1eD3YCxK6GrAiIngrUOpPlsZwoJz73sI2/view?usp=sharing">
 										<h2>My Journey to Tech</h2>
 										<div class="content">
 											<p>Pursuing a career as a computer scientist has been my wildest dream so far. I'd not be here today without some critical exposures earlier in life. And this is my story...</p>
