--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/huyen1.jpg" alt="" />
+										<img src="images/huyen.jpg" alt="" />
 									</span>
 									<a href="/assets/documents/journeytech.pdf">
 										<h2>My Journey To Tech</h2>
