--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="/assets/documents/journeytech.pdf">
 										<h2>My Journey To Tech</h2>
 										<div class="content">
-											<p>Pursuing a career as a computer scientist has been my wildest dream so far. I'd not be here today without some critical exposures earlier in life. And this is my story...</p>
+											<p>Anecdotes like meeting Chip Huyen- a female computer scientist I look up to or attend hackathons and conferences that shaped my career trajectory...</p>
 										</div>
 									</a>
 								</article>
