--- a/index.html
+++ b/index.html
@@ -58,15 +58,28 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/huyen.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="/assets/documents/journeytech.pdf">
 										<h2>My Journey To Tech</h2>
 										<div class="content">
-											<p>Anecdotes like meeting Chip Huyen- a female computer scientist I look up to or attend hackathons and conferences that shaped my career trajectory...</p>
+											<p>Anecdotes like meeting Chip Huyen- a female computer scientist I look up to or attend hackathons and conferences that shaped my career trajectory.</p>
 										</div>
 									</a>
 								</article>
+
+								<article class="style1">
+									<span class="image">
+										<img src="images/huyen.jpg" alt="" />
+									</span>
+									<a href="https://gist.github.com/jackietrang/6061fb08681d048371b9c8ae267dde1e">
+										<h2>Using data from a Kaggle competition, I trained an image classification model to detect Diabetic Retinopathy from fastai library with 92% accuracy.</h2>
+										<div class="content">
+											<p>The .</p>
+										</div>
+									</a>
+								</article>
+
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
