--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/huyen.jpg" alt="" />
 									</span>
 									<a href="/assets/documents/journeytech.pdf">
 										<h2>My Journey To Tech</h2>
@@ -70,12 +70,12 @@
 
 								<article class="style1">
 									<span class="image">
-										<img src="images/huyen.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="https://gist.github.com/jackietrang/6061fb08681d048371b9c8ae267dde1e">
-										<h2>Using data from a Kaggle competition, I trained an image classification model to detect Diabetic Retinopathy from fastai library with 92% accuracy.</h2>
+										<h2></h2>
 										<div class="content">
-											<p>The .</p>
+											<p>Using data from Kaggle competition, I trained an image classification model to detect Diabetic Retinopathy from fastai library with 92% accuracy.</p>
 										</div>
 									</a>
 								</article>
