--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="https://gist.github.com/jackietrang/6061fb08681d048371b9c8ae267dde1e">
-										<h2></h2>
+										<h2>[Pytorch] Deep Learning model: Blind detection</h2>
 										<div class="content">
 											<p>Using data from Kaggle competition, I trained an image classification model to detect Diabetic Retinopathy from fastai library with 92% accuracy.</p>
 										</div>
