--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi! I am</h1>
-								<p>An aspiring Data Scientist with proficiency in Python and R for statistical analysis.</p>
-							</p>Interested in all-thing-data & sharpening my knowledge in machine learning algorithms.</p>
+								<h1>Hi!</h1>
+								<p>I'm an aspiring Data Scientist with proficiency in Python and R for statistical analysis</p>
+							</p>with a deep interest in all-thing-data & sharpening my knowledge in machine learning algorithms.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
