--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="writing.html">My writing projects</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href=/assets/documents/resumeFeb2020.pdf">My resume</a></li>
+							<li><a href="generic.html">About me</a></li>
 						</ul>
 					</nav>
 
