--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href=/assets/documents/resumeFeb2020.pdf">My resume</a></li>
+							<li><a href=/assets/documents/resumeFeb2020.pdf">My Resume</a></li>
 							<li><a href="generic.html">About me</a></li>
 						</ul>
 					</nav>
