--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 						<div class="inner">
 							<header>
 								<h1>Hi!</h1>
-								<p>I'm an aspiring Data Scientist with proficiency in Python and R for statistical  analysis</p>
-							</p>with a deep interest in all-thing-data & sharpening my knowledge in machine learning algorithms.</p>
+								<p>I'm an aspiring Computer Scientist with proficiency in Python and R for statistical  analysis.</p>
+							</p>I'm working toward building a holistic set of skills in web development and product management.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
