--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+	<div class = "Home section" id="videoParent">
+		<!-- <div class="fullscreen-bg"> -->
+		<div class="VidOverlay">
+		</div>
+		<video autoplay muted loop class="videoSection" id="video">
+			<source src="lakevideo.mp4" type="video/mp4">
+			Your browser does not support HTML5 video.
+		</video>
+
+		<!-- </div> -->
+		<ul class="nav">
+			<li><a href="#home">Home</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#contact">Contact Me</a></li>
+		</ul>
+		<div class="heading">
+			<p id = "main"> Jackie Trang </p>
+			<p id = "secondary"> exploring </p>
+		</div>
+	</div>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
