--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 	</head>
 	<body class="is-preload">
 
-
+	<div class ="header-sec">
 		<div class="heading">
 			<p id = "main"> Jackie Trang </p>
 			<p id = "secondary"> exploring </p>
 		</div>
-
-
+	</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
