--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Jackie Trang</title>
@@ -14,33 +10,15 @@
 	</head>
 	<body class="is-preload">
 
-	<div class ="header-sec">
+	<div class ="name-slogan">
 		<div class="heading">
-			<p id = "main"> Jackie Trang </p>
-			<p id = "secondary"> exploring </p>
+			<p id = "my-name"> Jackie Trang </p>
+			<p id = "tag-line"> full-stack engineer | analyst </p>
 		</div>
 	</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
-
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Jackie Trang</span>
-								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
@@ -55,9 +33,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hi!</h1>
-								<p>I'm an aspiring Computer Scientist with proficiency in Python and R for statistical  analysis.</p>
-							</p>I'm working toward building a holistic set of skills in web development and product management.</p>
+								<p>I'm an aspiring full-stack engineer with strong analytic skills. </p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -131,7 +107,7 @@
 									</a>
 						
 								
-									</a>
+
 								</article>
 
 
