--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<div class ="name-slogan">
 		<div class="heading">
-			<p id = "my-name"> Jackie Trang </p>
-			<p id = "tag-line"> full-stack engineer | analyst </p>
+			<div id = "my-name"> Jackie Trang </div>
+			<div id = "tag-line"> full-stack engineer | analyst </div>
 		</div>
 	</div>
 		<!-- Wrapper -->
@@ -32,9 +32,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<p>I'm an aspiring full-stack engineer with strong analytic skills. </p>
-							</header>
+
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
