--- a/index.html
+++ b/index.html
@@ -146,20 +146,20 @@
 
 
 <!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-
-			<section>
-				<h2>Get in touch</h2>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/jackie-trang-893011131/" class="icon brands style2 fa-500px"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/jackietrang" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:trang18@minerva.kgi.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-			</section>
-
+<footer id="footer">
+<section id="contact-section" class="section">
+	<div class="section-wrapper">
+		<h1> Get in touch </h1>
+		<p>I currently open to opportunities in web development and data analytics.</p>
+		<p>If you just want to have a chat, my inbox is open!</p>
+		<div class="button">
+			<a href="mailto:trang18@minerva.kgi.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
+			<a href="https://www.linkedin.com/in/jackie-trang-893011131/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a>
 		</div>
-	</footer>
+	</div>
+</section>
+</footer>
+
 </div>
 
 		<!-- Scripts -->
