--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="about-wrapper">
 					<img class="headshot" src="assets/portfolio%20pics/me%20pic.jpg" alt="headshot">
 					<div class="about-text-wrapper">
-						<p class="about-text">I'm a rising senior at Minerva Schools at KGI studying computer science. It was in college when I realized I love to code!</p>
+						<p class="about-text">I'm a rising junior at Minerva Schools at KGI studying computer science. It was in college when I realized I love to code!</p>
 						<p class="about-text">I have work experience in the US and India in both data analytics and software development. While data analytics develops my attention to detail, software development teaches me clean and efficient code. I'm always looking for ways to learn from other people and create useful applications.</p>
 					</div>
 				</div>
