--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="section-wrapper">
 			<div class="fade-in">
 				<h1 class="section-heading">Hi, I'm Jackie.</h1>
-				<h3 class="section-subheading">I'm a data-driven, detail-oriented software engineer in the making.</h3>
+				<h3 id="section-subheading">I'm a data-driven, detail-oriented software engineer in the making.</h3>
 				<span class="divider"></span>
 				<div class="about-wrapper">
 					<img class="headshot" src="assets/portfolio%20pics/me%20pic.jpg" alt="headshot">
