--- a/index.html
+++ b/index.html
@@ -63,11 +63,31 @@
 		</div>
 		</div>
 	</section>
+<!-- Development Projects-->
+<div class="section-wrapper">
+	<h1 class="section-heading">Personal Projects</h1>
+	<div class="picContainer">
+		<img src="assets/portfolio pics/colorGame.png" alt="Responsive Portfolio Site">
+		<div class="picOverlay">
+			<h4>Women in Engineering Quiz</h4>
+			<ul>
+				<li> HTML & CSS</li>
+				<li> Javascript </li>
+			</ul>
+			<a href="https://color-game-jackie.glitch.me/womanQuiz.html" target="_blank">
+				<button>Demo</button>
+			</a>
+			<a href="" target="_blank">
+				<button>Code</button>
+			</a>
+		</div>
+	</div>
+</div>
 
-	<!-- Portfolio -->
+	<!-- Data Analytics Projects -->
 	<section id="portfolio-section" class="section">
 		<div class="section-wrapper">
-			<h1> Some Projects </h1>
+			<h1> Data Analytics Projects </h1>
 			<div class="tiles">
 				<article class="style1">
 
