--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="section-wrapper">
 	<h1 class="section-heading">Personal Projects</h1>
 	<div class="picContainer">
-		<img src="assets/portfolio pics/colorGame.png" alt="Responsive Portfolio Site">
+		<img src="assets/portfolio pics/colorGame.PNG" alt="Responsive Portfolio Site">
 		<div class="picOverlay">
 			<h4>Women in Engineering Quiz</h4>
 			<ul>
