--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="/assets/documents/resumeFeb2020.pdf">My Resume</a></li>
+							<li><a href="/assets/documents/Trang_Jackie July Resume.pdf">My Resume</a></li>
 						</ul>
 					</nav>
 
