--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <!-- Development Projects-->
 <div class="section-wrapper">
 	<h1 class="section-heading">Personal Projects</h1>
+	<div class="projects">
+	<div class = "col">
 	<div class="picContainer">
 		<img src="assets/portfolio pics/colorGame.PNG" alt="Responsive Portfolio Site">
 		<div class="picOverlay">
@@ -82,8 +84,29 @@
 			</a>
 		</div>
 	</div>
+	</div>
+
+	<div class="col">
+	<div class="picContainer">
+		<img src="assets/portfolio pics/signup2.PNG" alt="Sign-up Form">
+		<div class="picOverlay">
+			<h4>Sign-up Form</h4>
+			<ul>
+				<li> HTML & CSS</li>
+				<li> Javascript </li>
+			</ul>
+			<a href="https://ui-signup-form.vercel.app/" target="_blank">
+				<button>Demo</button>
+			</a>
+			<a href="https://github.com/jackietrang/ui-signup-form" target="_blank">
+				<button>Code</button>
+			</a>
+		</div>
+	</div>
+</div>
 </div>
 
+</div>
 	<!-- Data Analytics Projects -->
 	<section id="portfolio-section" class="section">
 		<div class="section-wrapper">
