--- a/index.html
+++ b/index.html
@@ -56,15 +56,23 @@
 		<div class="section-wrapper">
 		<div class = "skills">
 			<h1 class="hide slideUp"> Experience with </h1>
-			<ul class="hide slideUp">
-				<li><img src="assets/portfolio pics/skill pics/html.png" alt="HTML" title="HTML"></li>
-				<li><img src="assets/portfolio pics/skill pics/css.png" alt="CSS" title="CSS"></li>
-				<li><img src="assets/portfolio pics/skill pics/js.png" alt="JavaScript" title="JavaScript"></li>
-				<li><img src="assets/portfolio pics/skill pics/python.png" alt="Python" title="Python"></li>
-				<li><img src="assets/portfolio pics/skill pics/r.png" alt="R" title="R"></li>
-				<li><img src="assets/portfolio pics/skill pics/git.png" alt="Git" title="Git"></li>
-
+			<ul class="skill-items">
+				<li class="skill-item">Python</li>
+				<li class="skill-item">Javascript</li>
+				<li class="skill-item">CSS</li>
+				<li class="skill-item">HTML</li>
+				<li class="skill-item">React</li>
+				<li class="skill-item">R (analytics)</li>
 			</ul>
+<!--			<ul class="hide slideUp">-->
+<!--				<li><img src="assets/portfolio pics/skill pics/html.png" alt="HTML" title="HTML"></li>-->
+<!--				<li><img src="assets/portfolio pics/skill pics/css.png" alt="CSS" title="CSS"></li>-->
+<!--				<li><img src="assets/portfolio pics/skill pics/js.png" alt="JavaScript" title="JavaScript"></li>-->
+<!--				<li><img src="assets/portfolio pics/skill pics/python.png" alt="Python" title="Python"></li>-->
+<!--				<li><img src="assets/portfolio pics/skill pics/r.png" alt="R" title="R"></li>-->
+<!--				<li><img src="assets/portfolio pics/skill pics/git.png" alt="Git" title="Git"></li>-->
+
+<!--			</ul>-->
 		</div>
 		</div>
 	</section>
