--- a/index.html
+++ b/index.html
@@ -23,33 +23,30 @@
 		</div>
 	</div>
 <!---->
-			<div id="wrapper">
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="/assets/documents/Trang_Jackie July Resume.pdf">My Resume</a></li>
-						</ul>
-					</nav>
+<div id="wrapper">
+<!-- Menu -->
+	<nav id="menu">
+		<h2>Menu</h2>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="/assets/documents/Trang_Jackie July Resume.pdf">My Resume</a></li>
+		</ul>
+	</nav>
 
 <!--About Me-->
-	<section id="about-section" class="section">
-		<div class="section-wrapper">
-			<div class="fade-in">
-				<h1 class="section-heading">Hi, I'm Jackie.</h1>
+<section id="about-section" class="section">
+	<div class="section-wrapper">
+		<div class="container">
+			<div class="about-text">
+				<h1> Hi, I'm Jackie </h1>
 				<h3 id="section-subheading">I'm a data-driven, detail-oriented software engineer in the making.</h3>
-				<span class="divider"></span>
-				<div class="about-wrapper">
-					<img class="headshot" src="assets/portfolio%20pics/me%20pic.jpg" alt="headshot">
-					<div class="about-text-wrapper">
-						<p class="about-text">I'm a rising junior at Minerva Schools at KGI studying computer science. It was in college when I realized I love to code!</p>
-						<p class="about-text">I have work experience in the US and India in both data analytics and software development. While data analytics develops my attention to detail, software development teaches me clean and efficient code. I'm always looking for ways to learn from other people and create useful applications.</p>
-					</div>
-				</div>
+				<p class="about-text">I'm a rising junior at Minerva Schools at KGI studying computer science. It was in college when I realized I love to code!</p>
+				<p class="about-text">I have work experience in the US and India in both data analytics and software development. While data analytics develops my attention to detail, software development teaches me clean and efficient code. I'm always looking for ways to learn from other people and create useful applications.</p>
 			</div>
+			<div class="about-img"><img class="headshot" src="assets/portfolio%20pics/me%20pic.jpg" alt="headshot"></div>
 		</div>
-	</section>
+	</div>
+</section>
 
 <!--Skills-->
 	<section id="skills-section" class="section">
