--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<li> HTML & CSS</li>
 				<li> Javascript </li>
 			</ul>
-			<a href="https://color-game-jackie.glitch.me/womanQuiz.html" target="_blank">
+			<a href="https://women-stem-quiz.vercel.app/" target="_blank">
 				<button>Demo</button>
 			</a>
 			<a href="" target="_blank">
