--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<a href="https://women-stem-quiz.vercel.app/" target="_blank">
 				<button>Demo</button>
 			</a>
-			<a href="" target="_blank">
+			<a href="https://github.com/jackietrang/women-STEM-quiz">
 				<button>Code</button>
 			</a>
 		</div>
